2004-07-17  Francois Dumont <dums@...>

	* Application of a Mac OSX patch from John Daniel (www.etresoft.com)

2004-07-15  Francois Dumont <dums@...>

	* stlport/stl/_epilog.h: systematical use of the redefined std namespace
	rather than using the namespace inclusion schema.

	* test/unit/set_test.cpp: addition of a test case to show the problem of
	the namespace injection schema.

2004-07-13  Francois Dumont <dums@...>

	* stlport/numeric: removal of the _function.h header include.

	* test/unit/divide_test.cpp: add the missing functionnal header
	inclusion.

	* doc/README.msvc: new doc specific to the MSVC++ family compiler.

2004-07-12  Petr Ovtchenkov  <ptr@Island...>

	* test/fstream_test.cpp: tests for unformatted extraction bug.

	* stlport/stl/_istream.c: _M_read_unbuffered should leave delimiter
	in the stream in case of unformatted input. Thanks Joerg Becker.

2004-07-09  Francois Dumont  <dums@...>

	* src/sgi_mipspro.mak: add the -LANG:libc_in_namespace_std:OFF
	thanks Jack Perdue.

2004-07-08  Francois Dumont  <dums@...>

	* doc/README.evc3: additionnal doc thanks Michael Fink

2004-07-08  Petr Ovtchenkov  <ptr@Island...>

	* test/unit/sstream_test.cpp: added two test for unformatted extraction
	and newline character. Inspired by Joerg Becker.

2004-07-07  Francois Dumont  <dums@...>

	* stlport/stl/_hashtable.h, stlport/stl/_hashtable.c, 
	stlport/stl/_hash_set.h, stlport/stl/_hash_map.h: generalization
	of the iterator traits adopted on the tree class. Now iterator and
	const_iterator on hash_set and hash_multiset are different types
	even if iterator is still immutable.

	* stlport/stl/_deque.h, stlport/stl/_list.h, stlport/stl/_slist.h:
	Modification of the iterator classes to only use the template
	parameter _Traits rather than using an external type traits. It is
	the way hash containers and sorted containers have their iterator
	struct working.

	* stlport/stl/_iterator_base.h: Addition of the immutable traits 