@@ -1,3 +1,12 @@
+2004-07-21  Francois Dumont <dums@...>
+
+	* stlport/config/stl_gcc.h: Fix of a gcc 3.3.0 test that did not handle
+	the gcc 2.95.x correctly thanks Jordan Breeding.
+  
+	* src/common_rules.mak: Addition of the stlport/stl/pointers folder within
+	the folder to be install. Add of a call to ranlib under linux mandatory under
+	Mac OS X and without impact under the other Unixes systems.
+
 2004-07-17  Francois Dumont <dums@...>
 
 	* Application of a Mac OSX patch from John Daniel (www.etresoft.com)
